# libHALWrapper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: FindMCUBase.cmake  FindMCUFlags.cmake  FindMCUNewlib.cmake  FindMCURev.cmake  FindMCUShrink.cmake  skipSymbols.map
data/: stm32f0_hal.list  stm32f0_hal_header.list  stm32f1_hal.list  stm32f1_hal_header.list  stm32f3_hal.list  stm32f3_hal_header.list  stm32f4_hal.list  stm32f4_hal_header.list  stm32g0_hal.list  stm32g0_hal_header.list  stm32g4_hal.list  stm32g4_hal_header.list  stm32l0_hal.list  stm32l0_hal_header.list  stm32l1_hal.list  stm32l1_hal_header.list  stm32l4_hal.list  stm32l4_hal_header.list
doc/: build_example.md  chart.dia  documentation.txt
example/: CMakeLists.txt  build_example.sh  flash_example.sh
example/include/: config.h  example_config_stm32f042x6.h  example_config_stm32f072xb.h  example_config_stm32f303x8.h  example_config_stm32f407xg.h  example_config_stm32g031x8.h  example_config_stm32g441xb.h  example_config_stm32l031x6.h  example_config_stm32l152x8.h  info.hpp  syscallsUart.hpp
example/scripts/: stm32_biwak.ld  stm32f042x6.ld  stm32f072xb.ld  stm32f303x8.ld  stm32f407xg.ld  stm32g031x8.ld  stm32g441xb.ld  stm32l031x6.ld  stm32l152x8.ld
example/src/: info.cpp  main.cpp  syscallsUart.cpp
include/HALWrapper/: core.h  stm32.h  stm32_adc.h  stm32_can.h  stm32_cortex.h  stm32_crc.h  stm32_dac.h  stm32_dma.h  stm32_eeprom.h  stm32_fdcan.h  stm32_flash.h  stm32_gpio.h  stm32_hal.h  stm32_i2c.h  stm32_lcd.h  stm32_pwr.h  stm32_qspi.h  stm32_rcc.h  stm32_rtc.h  stm32_sd.h  stm32_spi.h  stm32_sup.h  stm32_tim.h  stm32_tsc.h  stm32_uart.h  stm32_usart.h  stm32_usart_ex.h  stm32_usb.h  stm32_wdg.h
scripts/: obtain_github.sh
src/: system_sup.c  system_sup_stm32f0xx.c  system_sup_stm32f1xx.c  system_sup_stm32f3xx.c  system_sup_stm32f4xx.c  system_sup_stm32g0xx.c  system_sup_stm32g4xx.c  system_sup_stm32l0xx.c  system_sup_stm32l1xx.c  system_sup_stm32l4xx.c
src/stm32/: stm32xx_system_sup.c
src/x86/: stm32f4xx_pwr.c
